# cliargs

./: CMakeLists.txt  README.md
include/: cli-params.h  cliargs.h
include/cli-params/: params.h
include/cliargs/: arg.h  params.h
src/: arg.c  params.c  params.cc
